--- a/CHANGES
+++ b/CHANGES
@@ -3,10 +3,6 @@ of the cryptographic protocol verifier.
 
 Version 1.17
 
-- warnings when one uses a replication above another replication or
-a parallel composition. Changed priorities in the parser, so that
-(!N P1 | !N P2) is interpreted as ((!N P1) | (!N P2)) and not as
-(!N (P1 | !N P2)).
 - support for equational theories using the declaration "equation".
 This new declaration leads to two incompatible changes:
    - the declaration "fun f(T,T):T' [commut]." should now be written
@@ -20,11 +16,16 @@ This new declaration leads to two incompatible changes:
 The search depth for this transformation can be set by
 "set maxReplaceDepth = ..."
 - optimized the game simplification
+- documented the construct find[unique] in the manual.
+- warnings when one uses a replication above another replication or
+a parallel composition. Changed priorities in the parser, so that
+(!N P1 | !N P2) is interpreted as ((!N P1) | (!N P2)) and not as
+(!N (P1 | !N P2)).
 - generation of OCaml implementations: 
    - check that the oracle above the beginning of a role has
    a single return.
    - check that oracle above a role are also included in a role.
-- fixed minor bug in SSH example.
+- fixed minor bugs in SSH example.
 - fixed bug that allowed declaring two oracles of the same name
 one after the other: O():= ... return(); O():= ...
 - fixed subtle bug that could lead to an incorrect computation
